# find-your-godot

./: .editorconfig  Cargo.toml  LICENSE.md  README.md  build.rs  justfile
src/: cli.rs  commands.rs  config.rs  dirs.rs  main.rs  platform.rs  version.rs
src/commands/: cache.rs  edit.rs  install.rs  launch.rs  list.rs  show.rs  uninstall.rs
