[package]
name = "find-your-godot"
version = "0.1.0-dev"
authors = ["Gabriel Martinez <gabe@gabem.me>"]
description = "A version manager for the Godot game engine."
homepage = "https://github.com/mystal/find-your-godot"
repository = "https://github.com/mystal/find-your-godot"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "fyg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# Removed for now, though we might use it in the future for config files.
#confy = "0.5"
directories = "5"
futures = "0.3"
humansize = "2"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.7"
zip = { version = "0.6", default-features = false, features = ["deflate", "time"] }

[dependencies.octocrab]
version = "0.29"
default-features = false
features = [
    # Enable default features, but use platform-native TLS instead of rustls.
    # See: https://github.com/XAMPPRocky/octocrab/blob/v0.28.0/Cargo.toml#L68
    "timeout",
    "tracing",
    "retry",
    "opentls",
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.70"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
