[package]
name = "find-your-godot"
version = "0.1.0-dev"
authors = ["Gabriel Martinez <gabe@gabem.me>"]
description = "A version manager for the Godot game engine."
homepage = "https://github.com/mystal/find-your-godot"
repository = "https://github.com/mystal/find-your-godot"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "fyg"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive"] }
# Removed for now, though we might use it in the future for config files.
#confy = "0.5"
directories = "5"
futures = "0.3"
humansize = "2"
owo-colors = "4"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate", "time"] }

[dependencies.octocrab]
version = "0.37"
default-features = false
features = [
    # Enable default features, but use platform-native TLS instead of rustls.
    # See: https://github.com/XAMPPRocky/octocrab/blob/v0.37.0/Cargo.toml#L72
    "follow-redirect",
    "retry",
    "opentls",
    "timeout",
    "tracing",
    "default-client",
]

[build-dependencies]
anyhow = "1"
vergen-git2 = "1"
